--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Kcv1AMKCUHf/DdmCciDUYKCU5oJtZBrjZ27tjP2to8w=
+APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost:8080/CWgest/public
+APP_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
