--- a/composer.json
+++ b/composer.json
@@ -47,8 +47,7 @@
         "post-create-project-cmd": [
             "@php artisan key:generate",
             "@php artisan voyager:install",
-            "@set /p email=Email de Administrador?",
-            "@php artisan voyager:admin %email% --create"
+            "@php artisan voyager:admin --create"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
