--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate",
+            "@php artisan setup",
             "@php artisan voyager:install",
             "@php artisan voyager:admin --create"
         ],
